--- a/shoot.html
+++ b/shoot.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>BOSS RAID - Power Up Edition</title>
+    <title>BOSS RAID - Contrast Edition</title>
     <style>
         body { margin: 0; background: #050507; color: white; font-family: 'Pretendard', sans-serif; display: flex; flex-direction: column; align-items: center; min-height: 100vh; overflow: hidden; }
         #game-header { margin-top: 15px; }
@@ -73,7 +73,6 @@ const soldierImg = new Image(); soldierImg.src = 'soldier.png';
 const badImg = new Image(); badImg.src = 'bad.png';
 const bossImg = new Image(); bossImg.src = 'boss.png';
 
-// bulletSize 초기값 6 설정
 let player = { x: 225, y: 580, size: 35, weaponLv: 1, bulletSize: 6, lives: 5, invul: 0 };
 let bullets = [], enemyBullets = [], enemies = [], items = [], bosses = [];
 let isPaused = true, isSoundOn = true;
@@ -85,12 +84,14 @@ let isBossSummoned = false;
 const BOSS_TRIGGER_SCORE = 1000; 
 hiScoreDisplay.innerText = hiScore;
 
-// 무기 데이터 (색상 및 속도 위주)
+// [변경] 플레이어 무기 색상: 적군(빨강/핑크)과 완전히 대비되는 색상들
 const weaponData = {
-    1: { damage: 1, color: '#fff', speed: 10, fireRate: 15 },
-    2: { damage: 2, color: '#0f0', speed: 12, fireRate: 12 },
-    3: { damage: 5, color: '#0cf', speed: 15, fireRate: 8 },
-    4: { damage: 20, color: '#ffcc00', speed: 20, fireRate: 6 }
+    1: { damage: 1, color: '#FFFFFF', speed: 10, fireRate: 15 }, // 화이트
+    2: { damage: 2, color: '#CCFF00', speed: 12, fireRate: 12 }, // 라임그린 (고대비)
+    3: { damage: 5, color: '#00FFFF', speed: 15, fireRate: 10 }, // 아쿠아블루
+    4: { damage: 10, color: '#4400FF', speed: 17, fireRate: 8 },  // 로열블루
+    5: { damage: 18, color: '#FFFF00', speed: 19, fireRate: 7 },  // 네온옐로우
+    6: { damage: 30, color: '#F0F0F0', speed: 22, fireRate: 5 }   // 화이트골드 (최종)
 };
 
 const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
@@ -207,24 +208,22 @@ function update() {
 
     const wp = weaponData[player.weaponLv];
     if (frameCount % wp.fireRate === 0) {
-        // player.bulletSize를 사용하여 생성
-        bullets.push({ x: player.x, y: player.y - 35, ...wp, size: player.bulletSize });
+        bullets.push({ x: player.x, y: player.y - 35, ...wp, size: player.bulletSize, lv: player.weaponLv });
         playSound(700, 'sine', 0.08, 0.02);
     }
 
     enemies.forEach(e => {
-        // 적 총알 생성 빈도 상향 (기존 200 -> 120)
+        // [강화] 적군 공격 빈도 120프레임 유지
         if (frameCount - e.lastShot > 120) { 
-            enemyBullets.push({ x: e.x, y: e.y + 10, speed: 3.5, size: 5, color: '#f00', vx: 0 });
+            enemyBullets.push({ x: e.x, y: e.y + 10, speed: 3.5, size: 5, color: '#FF2222', vx: 0 }); // 선명한 레드
             e.lastShot = frameCount;
         }
     });
 
     bosses.forEach(b => {
-        // 보스 공격 빈도 상향 (기존 100 -> 60)
-        if (frameCount % 60 === 0) { 
-            for(let i=-2; i<=2; i++) {
-                enemyBullets.push({ x: b.x + (i*15), y: b.y + b.size/2, speed: 4, size: 7, color: '#f0f', vx: i*0.8 });
+        if (frameCount % 80 === 0) { 
+            for(let i=-1; i<=1; i++) {
+                enemyBullets.push({ x: b.x + (i*20), y: b.y + b.size/2, speed: 4, size: 7, color: '#FF00FF', vx: i*1.2 }); // 선명한 핑크/보라
             }
             playSound(150, 'square', 0.2, 0.05);
         }
@@ -239,8 +238,7 @@ function update() {
                 if (boss.hp <= 0) {
                     score += 5000 + (bossKillCount * 1000);
                     bossKillCount++;
-                    playSound(30, 'sawtooth', 2, 0.4);
-                    items.push({ x: boss.x, y: boss.y, lv: Math.min(4, player.weaponLv + 1) });
+                    items.push({ x: boss.x, y: boss.y, lv: Math.min(6, player.weaponLv + 1) });
                     bosses.splice(bsi, 1);
                 }
             }
@@ -275,21 +273,18 @@ function update() {
     enemies.forEach((e, ei) => {
         e.y += e.speed;
         if (Math.hypot(player.x - e.x, player.y - e.y) < (player.size * 0.8) + e.size) {
-            enemies.splice(ei, 1);
-            playerHit();
+            enemies.splice(ei, 1); playerHit();
         }
         if (e.y > canvas.height + e.size) {
-            enemies.splice(ei, 1);
-            playerHit();
+            enemies.splice(ei, 1); playerHit();
         }
     });
 
     items.forEach((item, ii) => {
         item.y += 2.2;
         if (Math.hypot(player.x - item.x, player.y - item.y) < player.size + 15) {
-            // 아이템 획득 시 무기 레벨업 및 총알 크기 1.5배 증가
-            player.weaponLv = Math.min(4, item.lv);
-            player.bulletSize = Math.min(150, player.bulletSize * 1.5); // 최대 크기 제한 150
+            player.weaponLv = Math.min(6, item.lv);
+            player.bulletSize = Math.min(100, player.bulletSize * 1.2); 
             items.splice(ii, 1);
             playSound(900, 'sine', 0.2, 0.1);
         }
@@ -300,8 +295,7 @@ function update() {
 }
 
 function gameOver() {
-    isPaused = true; 
-    menu.style.display = 'block';
+    isPaused = true; menu.style.display = 'block';
     menuTitle.innerText = "GAME OVER";
     document.getElementById('menuScoreText').innerText = `최종 점수: ${score}`;
     document.getElementById('bestScoreText').innerText = `최고 기록: ${hiScore}`;
@@ -309,52 +303,52 @@ function gameOver() {
 
 function draw() {
     ctx.clearRect(0, 0, canvas.width, canvas.height);
-
     bosses.forEach(b => {
         if (bossImg.complete) ctx.drawImage(bossImg, b.x - b.size, b.y - b.size, b.size * 2, b.size * 2);
         ctx.fillStyle = '#222'; ctx.fillRect(b.x - 60, b.y - b.size - 25, 120, 8);
         ctx.fillStyle = '#f00'; ctx.fillRect(b.x - 60, b.y - b.size - 25, (b.hp/b.maxHp) * 120, 8);
     });
-
     if (!(player.invul > 0 && frameCount % 6 < 3)) {
         if (soldierImg.complete) {
             const drawSize = player.size * 2.5; 
             ctx.drawImage(soldierImg, player.x - drawSize/2, player.y - drawSize/2, drawSize, drawSize);
         }
     }
-
     enemies.forEach(e => {
         if (badImg.complete) ctx.drawImage(badImg, e.x - e.size, e.y - e.size, e.size * 2, e.size * 2);
     });
-
+    
+    // [강화] 내 총알 그리기 - 광원 연출 강화
     bullets.forEach(b => {
-        ctx.fillStyle = b.color; ctx.beginPath(); ctx.arc(b.x, b.y, b.size, 0, Math.PI * 2); ctx.fill();
+        ctx.save();
+        ctx.shadowBlur = b.lv * 6;
+        ctx.shadowColor = b.color;
+        // 최종 6단계는 금빛 글로우 추가
+        if(b.lv === 6) {
+            ctx.shadowBlur = 25;
+            ctx.shadowColor = '#FFD700'; 
+        }
+        ctx.fillStyle = b.color;
+        ctx.beginPath();
+        ctx.arc(b.x, b.y, b.size, 0, Math.PI * 2);
+        ctx.fill();
+        ctx.restore();
     });
 
     enemyBullets.forEach(eb => {
         ctx.shadowBlur = 8; ctx.shadowColor = eb.color;
-        ctx.fillStyle = eb.color;
-        ctx.beginPath(); ctx.arc(eb.x, eb.y, eb.size, 0, Math.PI * 2); ctx.fill();
+        ctx.fillStyle = eb.color; ctx.beginPath(); ctx.arc(eb.x, eb.y, eb.size, 0, Math.PI * 2); ctx.fill();
         ctx.shadowBlur = 0;
     });
 
     items.forEach(item => {
-        const itemRadius = 20;
         ctx.shadowBlur = 15; ctx.shadowColor = '#ff0';
-        ctx.fillStyle = '#ff0';
-        ctx.beginPath(); ctx.arc(item.x, item.y, itemRadius, 0, Math.PI * 2); ctx.fill();
-        ctx.shadowBlur = 0;
-        ctx.fillStyle = '#000';
-        ctx.font = 'bold 20px Arial';
-        ctx.textAlign = 'center';
-        ctx.textBaseline = 'middle';
-        ctx.fillText("P", item.x, item.y);
+        ctx.fillStyle = '#ff0'; ctx.beginPath(); ctx.arc(item.x, item.y, 20, 0, Math.PI * 2); ctx.fill();
+        ctx.shadowBlur = 0; ctx.fillStyle = '#000'; ctx.font = 'bold 20px Arial';
+        ctx.textAlign = 'center'; ctx.textBaseline = 'middle'; ctx.fillText("P", item.x, item.y);
     });
 }
-
-function loop() {
-    if (!isPaused) { update(); draw(); requestAnimationFrame(loop); }
-}
+function loop() { if (!isPaused) { update(); draw(); requestAnimationFrame(loop); } }
 </script>
 </body>
 </html>
