--- a/shoot.html
+++ b/shoot.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>BOSS RAID - Contrast Edition</title>
+    <title>BOSS RAID - Balanced Edition</title>
     <style>
         body { margin: 0; background: #050507; color: white; font-family: 'Pretendard', sans-serif; display: flex; flex-direction: column; align-items: center; min-height: 100vh; overflow: hidden; }
         #game-header { margin-top: 15px; }
@@ -84,14 +84,13 @@ let isBossSummoned = false;
 const BOSS_TRIGGER_SCORE = 1000; 
 hiScoreDisplay.innerText = hiScore;
 
-// [변경] 플레이어 무기 색상: 적군(빨강/핑크)과 완전히 대비되는 색상들
 const weaponData = {
-    1: { damage: 1, color: '#FFFFFF', speed: 10, fireRate: 15 }, // 화이트
-    2: { damage: 2, color: '#CCFF00', speed: 12, fireRate: 12 }, // 라임그린 (고대비)
-    3: { damage: 5, color: '#00FFFF', speed: 15, fireRate: 10 }, // 아쿠아블루
-    4: { damage: 10, color: '#4400FF', speed: 17, fireRate: 8 },  // 로열블루
-    5: { damage: 18, color: '#FFFF00', speed: 19, fireRate: 7 },  // 네온옐로우
-    6: { damage: 30, color: '#F0F0F0', speed: 22, fireRate: 5 }   // 화이트골드 (최종)
+    1: { damage: 1, color: '#FFFFFF', speed: 10, fireRate: 15 },
+    2: { damage: 2, color: '#CCFF00', speed: 12, fireRate: 12 },
+    3: { damage: 5, color: '#00FFFF', speed: 15, fireRate: 10 },
+    4: { damage: 10, color: '#4400FF', speed: 17, fireRate: 8 },
+    5: { damage: 18, color: '#FFFF00', speed: 19, fireRate: 7 },
+    6: { damage: 30, color: '#F0F0F0', speed: 22, fireRate: 5 }
 };
 
 const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
@@ -213,9 +212,9 @@ function update() {
     }
 
     enemies.forEach(e => {
-        // [강화] 적군 공격 빈도 120프레임 유지
-        if (frameCount - e.lastShot > 120) { 
-            enemyBullets.push({ x: e.x, y: e.y + 10, speed: 3.5, size: 5, color: '#FF2222', vx: 0 }); // 선명한 레드
+        // [변경] 적군 총알 발사 빈도 살짝 감소 (120 -> 160프레임)
+        if (frameCount - e.lastShot > 160) { 
+            enemyBullets.push({ x: e.x, y: e.y + 10, speed: 3.5, size: 5, color: '#FF2222', vx: 0 });
             e.lastShot = frameCount;
         }
     });
@@ -223,7 +222,7 @@ function update() {
     bosses.forEach(b => {
         if (frameCount % 80 === 0) { 
             for(let i=-1; i<=1; i++) {
-                enemyBullets.push({ x: b.x + (i*20), y: b.y + b.size/2, speed: 4, size: 7, color: '#FF00FF', vx: i*1.2 }); // 선명한 핑크/보라
+                enemyBullets.push({ x: b.x + (i*20), y: b.y + b.size/2, speed: 4, size: 7, color: '#FF00FF', vx: i*1.2 });
             }
             playSound(150, 'square', 0.2, 0.05);
         }
@@ -238,7 +237,8 @@ function update() {
                 if (boss.hp <= 0) {
                     score += 5000 + (bossKillCount * 1000);
                     bossKillCount++;
-                    items.push({ x: boss.x, y: boss.y, lv: Math.min(6, player.weaponLv + 1) });
+                    const itemType = Math.random() > 0.7 ? 'heart' : 'power';
+                    items.push({ x: boss.x, y: boss.y, type: itemType, lv: Math.min(6, player.weaponLv + 1) });
                     bosses.splice(bsi, 1);
                 }
             }
@@ -249,7 +249,11 @@ function update() {
                 bullets.splice(bi, 1);
                 if (e.hp <= 0) {
                     score += 100;
-                    if (Math.random() > 0.85) items.push({ x: e.x, y: e.y, lv: player.weaponLv + 1 });
+                    const rand = Math.random();
+                    if (rand > 0.90) {
+                        const itemType = rand > 0.97 ? 'heart' : 'power';
+                        items.push({ x: e.x, y: e.y, type: itemType, lv: player.weaponLv + 1 });
+                    }
                     enemies.splice(ei, 1);
                 }
             }
@@ -283,10 +287,15 @@ function update() {
     items.forEach((item, ii) => {
         item.y += 2.2;
         if (Math.hypot(player.x - item.x, player.y - item.y) < player.size + 15) {
-            player.weaponLv = Math.min(6, item.lv);
-            player.bulletSize = Math.min(100, player.bulletSize * 1.2); 
+            if (item.type === 'heart') {
+                player.lives++;
+                playSound(500, 'sine', 0.3, 0.1);
+            } else {
+                player.weaponLv = Math.min(6, item.lv);
+                player.bulletSize = Math.min(100, player.bulletSize * 1.2); 
+                playSound(900, 'sine', 0.2, 0.1);
+            }
             items.splice(ii, 1);
-            playSound(900, 'sine', 0.2, 0.1);
         }
     });
 
@@ -318,16 +327,11 @@ function draw() {
         if (badImg.complete) ctx.drawImage(badImg, e.x - e.size, e.y - e.size, e.size * 2, e.size * 2);
     });
     
-    // [강화] 내 총알 그리기 - 광원 연출 강화
     bullets.forEach(b => {
         ctx.save();
         ctx.shadowBlur = b.lv * 6;
         ctx.shadowColor = b.color;
-        // 최종 6단계는 금빛 글로우 추가
-        if(b.lv === 6) {
-            ctx.shadowBlur = 25;
-            ctx.shadowColor = '#FFD700'; 
-        }
+        if(b.lv === 6) { ctx.shadowBlur = 25; ctx.shadowColor = '#FFD700'; }
         ctx.fillStyle = b.color;
         ctx.beginPath();
         ctx.arc(b.x, b.y, b.size, 0, Math.PI * 2);
@@ -342,10 +346,21 @@ function draw() {
     });
 
     items.forEach(item => {
-        ctx.shadowBlur = 15; ctx.shadowColor = '#ff0';
-        ctx.fillStyle = '#ff0'; ctx.beginPath(); ctx.arc(item.x, item.y, 20, 0, Math.PI * 2); ctx.fill();
-        ctx.shadowBlur = 0; ctx.fillStyle = '#000'; ctx.font = 'bold 20px Arial';
-        ctx.textAlign = 'center'; ctx.textBaseline = 'middle'; ctx.fillText("P", item.x, item.y);
+        ctx.save();
+        if (item.type === 'heart') {
+            ctx.shadowBlur = 15; ctx.shadowColor = '#ff4444';
+            ctx.fillStyle = '#ff4444';
+            ctx.beginPath(); ctx.arc(item.x, item.y, 20, 0, Math.PI * 2); ctx.fill();
+            ctx.fillStyle = '#fff'; ctx.font = 'bold 20px Arial';
+            ctx.textAlign = 'center'; ctx.textBaseline = 'middle'; ctx.fillText("H", item.x, item.y);
+        } else {
+            ctx.shadowBlur = 15; ctx.shadowColor = '#ff0';
+            ctx.fillStyle = '#ff0';
+            ctx.beginPath(); ctx.arc(item.x, item.y, 20, 0, Math.PI * 2); ctx.fill();
+            ctx.fillStyle = '#000'; ctx.font = 'bold 20px Arial';
+            ctx.textAlign = 'center'; ctx.textBaseline = 'middle'; ctx.fillText("P", item.x, item.y);
+        }
+        ctx.restore();
     });
 }
 function loop() { if (!isPaused) { update(); draw(); requestAnimationFrame(loop); } }
