--- a/index.html
+++ b/index.html
@@ -184,6 +184,10 @@
             <div class="icon">🔫</div>
             <span>슈팅</span>
         </a>
+        <a href="boss.html" class="menu-button">
+            <div class="icon">↑</div>
+            <span>보스</span>
+        </a>
     </div>
 </body>
 </html>
