--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <span>슈팅</span>
         </a>
         <a href="boss.html" class="menu-button">
-            <div class="icon">↑</div>
+            <div class="icon">💣</div>
             <span>보스</span>
         </a>
     </div>
